Actions
Bug #11395
closedmsgfmt: NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with NULL pointer:
xgettext.c: In function 'handle_gettext': xgettext.c:607:18: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] curr_domain[0] = NULL; ^ xgettext.c: In function 'handle_dgettext': xgettext.c:639:18: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] curr_domain[0] = NULL; ^ xgettext.c: In function 'handle_dcgettext': xgettext.c:672:18: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] curr_domain[0] = NULL; ^ xgettext.c: In function 'handle_textdomain': xgettext.c:690:18: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] curr_domain[0] = NULL; ^ xgettext.c: In function 'handle_esc_newline': xgettext.c:777:15: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] curr_line[0] = NULL; ^ xgettext.c: In function 'copy_strlist_to_str': xgettext.c:850:9: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] str[0] = NULL; ^ xgettext.c: In function 'handle_newline': xgettext.c:939:15: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] curr_line[0] = NULL; ^ xgettext.c: In function 'initialize_globals': xgettext.c:969:17: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] curr_domain[0] = NULL; ^ xgettext.c:970:15: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] curr_file[0] = NULL; ^ xgettext.c:971:17: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] qstring_buf[0] = NULL; ^ xgettext.c: In function 'trim_line': xgettext.c:1044:11: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] line [i] = NULL; ^ xgettext.c: In function 'get_next_ch': xgettext.c:1147:25: error: comparison between pointer and integer [-Werror] } else if (p->str[*m] == NULL) { ^~ xgettext.c: In function 'add_qstring_to_str': xgettext.c:1383:17: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] qstring_buf[0] = NULL; ^ xgettext.c: In function 'find_domain_node': xgettext.c:1406:16: error: comparison between pointer and integer [-Werror] (dname[0] == NULL) || ^~ xgettext.c: In function 'isextracted': xgettext.c:1496:39: error: comparison between pointer and integer [-Werror] while ((first != NULL) && (first[0] != NULL)) { ^~ xgettext.c:1501:13: error: comparison between pointer and integer [-Werror] if (*pc == NULL) { ^~ xgettext.c:1504:12: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] *pc++ = NULL; ^ xgettext.c: In function 'write_one_file': xgettext.c:1908:11: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] dname[0] = NULL; ^ xgettext.c: In function 'output_msgid': xgettext.c:2147:17: error: comparison between pointer and integer [-Werror] (suffix[0] != NULL)) { ^~ msgfmt.c: In function 'read_psffm': msgfmt.c:492:41: error: comparison between pointer and integer [-Werror] if ((mb = expand_meta(&linebufptr)) != NULL) ^~ msgfmt.c: In function 'expand_meta': msgfmt.c:629:10: error: return makes integer from pointer without a cast [-Werror=int-conversion] return (NULL); ^ cc1: all warnings being treated as errors
Updated by Electric Monk almost 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit df69b3162f4007cd457c38c170602faca56dbf73
commit df69b3162f4007cd457c38c170602faca56dbf73 Author: Toomas Soome <tsoome@me.com> Date: 2019-07-20T18:30:55.000Z 11395 msgfmt: NULL pointer errors Reviewed by: Andy Fiddaman <andy@omniosce.org> Approved by: Garrett D'Amore <garrett@damore.org>
Actions