11395 msgfmt: NULL pointer errors Reviewed by: Andy Fiddaman <andy@omniosce.org> Approved by: Garrett D'Amore <garrett@damore.org>